tests/rosetta/transpiler/Scala/constrained-random-points-on-a-circle-1.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/constrained-random-points-on-a-circle-1.scala:67: error: overloaded method value < with alternatives:
  (x: Double)Boolean <and>
  (x: Float)Boolean <and>
  (x: Long)Boolean <and>
  (x: Int)Boolean <and>
  (x: Char)Boolean <and>
  (x: Short)Boolean <and>
  (x: Byte)Boolean
 cannot be applied to (scala.math.BigInt)
        if ((rs < min2 || rs > max2).asInstanceOf[Boolean]) {
                ^
/workspace/mochi/tests/rosetta/transpiler/Scala/constrained-random-points-on-a-circle-1.scala:67: error: overloaded method value > with alternatives:
  (x: Double)Boolean <and>
  (x: Float)Boolean <and>
  (x: Long)Boolean <and>
  (x: Int)Boolean <and>
  (x: Char)Boolean <and>
  (x: Short)Boolean <and>
  (x: Byte)Boolean
 cannot be applied to (scala.math.BigInt)
        if ((rs < min2 || rs > max2).asInstanceOf[Boolean]) {
                             ^
two errors found
